--- a/book/book.tex
+++ b/book/book.tex
@@ -13,7 +13,7 @@
 \newcommand{\thetitle}{Modeling and Simulation in Python}
 \newcommand{\thesubtitle}{}
 \newcommand{\theauthors}{Allen B. Downey}
-\newcommand{\theversion}{0.7.1}
+\newcommand{\theversion}{0.7.2}
 
 
 %%%% Both LATEX and PLASTEX
@@ -2743,8 +2743,6 @@ If the number of state variables is small, storing them as separate \py{TimeSeri
 
 \py{TimeFrame} objects are defined in \py{modsim.py}.  They are almost identical to the \py{DataFrame} objects we used in Section~\ref{worldpopdata}, with just a few changes I made to make them easier to use for our purposes.  If you want to know the details, you can read about it in \py{modsim.py}.
 
-we worked with \py{DataFrame} objects we got from \py{read_html}.  In this section we'll create a \py{DataFrame} and use it to store state variables.
-
 Here's a more concise version of \py{run_simulation}:
 
 \begin{python}
@@ -3029,7 +3027,7 @@ In the previous chapter I presented an SIR model of infectious disease, specific
 But we assumed that the parameters of the model, contact rate and recovery rate, were known.  In this chapter, we explore the behavior of the model as we vary these parameters, use analysis to understand these relationships better, and propose a method for using data to estimate parameters.
 
 We will use the following functions as defined in the previous chapter:
-\py{make_system}, \py{run_simulation}, \py{update1}, and \py{plot_results}, and \py{calc_total_infected}.
+\py{make_system}, \py{run_simulation}, \py{update1}, \py{plot_results}, and \py{calc_total_infected}.
 
 For example, here's the code to create a \py{System} object with given values of \py{beta} and \py{gamma}, run the simulation, and compute the fraction of the population that are infected.
 
@@ -3145,47 +3143,53 @@ Before we go on, let's encapsulate the code from the previous section in a funct
 
 \begin{python}
 def sweep_parameters(beta_array, gamma_array):
-    df = DataFrame(columns=gamma_array)
+    sf = SweepFrame(columns=gamma_array)
     for gamma in gamma_array:
-        df[gamma] = sweep_beta(beta_array, gamma)
-    return df
+        sf[gamma] = sweep_beta(beta_array, gamma)
+    return sf
 \end{python}
 
 \py{sweep_parameters} takes as parameters two arrays: a range of values for \py{beta} and a range of values for \py{gamma}.
 
-It creates a \py{DataFrame} to store the results, with one column for each value of \py{gamma} and one row for each value of \py{beta}.
+It creates a \py{SweepFrame} to store the results, with one column for each value of \py{gamma} and one row for each value of \py{beta}.  A \py{SweepFrame} is a kind of \py{DataFrame}, defined in \py{modsim.py}.  Its purpose is to store results from a two-dimensional parameter sweep.
 
 Each time through the loop, we run \py{sweep_beta}.  The result is a \py{Sweep} object with one element for each value of \py{gamma}.  The assignment
 
 \begin{python}
-df[gamma] = sweep_beta(beta_array, gamma)
+sf[gamma] = sweep_beta(beta_array, gamma)
 \end{python}
 
-stores the values from the \py{Sweep} object as a new column in the \py{DataFrame}, corresponding to the current value of \py{gamma}.
+stores the values from the \py{Sweep} object as a new column in the \py{SweepFrame}, corresponding to the current value of \py{gamma}.
 
-At the end, the \py{DataFrame} stores the fraction of students infected for each pair of parameters, \py{beta} and \py{gamma}.
+At the end, the \py{SweepFrame} stores the fraction of students infected for each pair of parameters, \py{beta} and \py{gamma}.
 
 We can run it like this:
 
 \begin{python}
-sweep_df = sweep_parameters(beta_array, gamma_array)
+sf = sweep_parameters(beta_array, gamma_array)
 \end{python}
 
 Then we can loop through the results like this:
 
 \begin{python}
-for gamma in df.columns:
-    sweep = df[gamma]
+for gamma in sf.columns:
+    sweep = sf[gamma]
     for beta in sweep.index:
         frac_infected = sweep[beta]
         print(beta, gamma, frac_infected)
 \end{python}
 
-This is the first example we've seen with one \py{for} loop inside another.  But there's nothing about it that should be too surprising.  Each time the outer loop runs, it selects a value of \py{gamma} from the columns of the \py{DataFrame} and extracts the corresponding column.
+This is the first example we've seen with one \py{for} loop inside another:
 
-Each time the inner loop runs, it selects a value of \py{beta} from the \py{Sweep} and selects the corresponding element, which is the fraction of student infected.
+\begin{itemize}
 
-In this example, \py{sweep_df} has 4 columns, one for each value of \py{gamma}, and 11 rows, one for each value of \py{beta}.  So these loops print 44 lines, one for each pair of parameters.
+\item Each time the outer loop runs, it selects a value of \py{gamma} from the columns of the \py{DataFrame} and extracts the corresponding column.
+
+\item Each time the inner loop runs, it selects a value of \py{beta} from the \py{Sweep} and selects the corresponding element, which is the fraction of student infected.
+
+\end{itemize}  
+
+In this example, \py{sf} has 4 columns, one for each value of \py{gamma}, and 11 rows, one for each value of \py{beta}.  So these loops print 44 lines, one for each pair of parameters.
 
 Now let's think about possible relationships between \py{beta} and \py{gamma}:
 
@@ -3204,9 +3208,9 @@ So we'll try the second option first.  In the notebook for this chapter, you wil
 The following function encapsulates the previous loops and plots the fraction infected as a function of the ratio \py{beta/gamma}:
 
 \begin{python}
-def plot_sweep_df(df):
-    for gamma in df.columns:
-        sweep = df[gamma]
+def plot_sweep_frame(sf):
+    for gamma in sf.columns:
+        sweep = sf[gamma]
         for beta in sweep.index:
             frac_infected = sweep[beta]
             plot(beta / gamma, frac_infected, 'ro')
@@ -3223,7 +3227,7 @@ Figure~\ref{chap06-fig03} shows that the results fall neatly on a single curve, 
 
 \section{Contact number}
 
-Recall that the number of new infections in a given day is $\beta s i N$, and the number of recoveries is $\gamma i N$.  If we divide these quantities, the result is $\beta / \gamma s$, which is the number of new infections per recovery (as a fraction of the population).
+Recall that the number of new infections in a given day is $\beta s i N$, and the number of recoveries is $\gamma i N$.  If we divide these quantities, the result is $\beta s / \gamma$, which is the number of new infections per recovery (as a fraction of the population).
 
 When a new disease is introduced to a susceptible population, $s$ is approximately 1, so the number of people infected by each sick person is $\beta / \gamma$.  This ratio is called the ``contact number" or ``basic reproduction number" (see \url{https://en.wikipedia.org/wiki/Basic_reproduction_number}).  By convention it is usually denoted $R_0$, but in the context of an SIR model, this notation is confusing, so we'll use $c$ instead.
 
@@ -3241,29 +3245,29 @@ In the same way we divided the contact rate by the infection rate to get the dim
 %
 Dividing one differential equation by another is not an obvious move, but in this case it is useful because it gives us a relationship between $i$, $s$ and $c$ that does not depend on time.  We can multiply both sides by $ds$:
 %
-\[ di = -1 + \frac{1}{cs} ds \]
+\[ di = \left( -1 + \frac{1}{cs} \right) ds \]
 %
 And then integrate both sides:
 %
 \[ i = -s + \frac{1}{c} \log s + q \]
 %
-Where $q$ is a constant of integration.  Rearranging terms yields:
+where $q$ is a constant of integration.  Rearranging terms yields:
 %
 \[ q = i + s - \frac{1}{c} \log s \]
 %
-At the beginning of an epidemic, if the fraction infected is small and nearly everyone is susceptible, we can use the approximations $i(0) = 0$ and $s(0) = 1$ to compute $q$:
+Now let's see if we can figure out what $q$ is.  At the beginning of an epidemic, if the fraction infected is small and nearly everyone is susceptible, we can use the approximations $i(0) = 0$ and $s(0) = 1$ to compute $q$:
 %
 \[ q = 0 + 1 + \frac{1}{c} \log 1 \]
 %
-Since $\log 1 = 0$, we have $q = 1$.
+Since $\log 1 = 0$, we get $q = 1$.
 
 \newcommand{\sinf}{s_{\infty}}
 
-Now, at the end of the epidemic, let's assume that $i_{\infty} = 0$ again and $s(\infty)$ is an unknown quantity $\sinf$.  Now we have:
+Now, at the end of the epidemic, let's assume that $i_{\infty} = 0$ and $s(\infty)$ is an unknown quantity $\sinf$.  Now we have:
 %
 \[ q = 1 = 0 + \sinf - \frac{1}{c} \log \sinf \]
 %
-Solving for $c$, we have
+Solving for $c$, we get
 %
 \[ c = \frac{\log \sinf}{\sinf - 1} \]
 %
@@ -3303,7 +3307,7 @@ plot(frac_infected_series)
 \label{chap06-fig04}
 \end{figure}
 
-Figure~\ref{chap06-fig04} compare the analytic results from this section with the simulation results from the previous section.  Over most of the range they are consistent with each other, but when the contact number is less than 1, the analysis suggests that there will be virtually no infections; in the simulations a new infection can affect a small part of the population, even when $c<1$.
+Figure~\ref{chap06-fig04} compares the analytic results from this section with the simulation results from the previous section.  Over most of the range they are consistent with each other, but when the contact number is less than 1, the analysis suggests that there will be virtually no infections; in the simulations a new infection can affect a small part of the population, even when $c<1$.
 
 The reason for the discrepancy is that the simulation divides time into a discrete series of days, whereas the analysis treats time as a continuous quantity.  In other words, the two methods are actually based on different models.
 
@@ -3446,6 +3450,8 @@ where $\Delta t$ is a small time step and $\Delta T$ is the change in temperatur
 
 One note: I use $\Delta T$ to denote a change in temperature over time, but in the context of heat transfer, you might also see $\Delta T$ used to denote the difference in temperature between an object and its environment, $T - T_{env}$.  To minimize confusion, I will avoid this second use.
 
+%TODO: introduce unpack()
+
 Now we can write an update function:
 
 \begin{python}
@@ -3487,10 +3493,10 @@ The result is a \py{TimeFrame} object with one row per time step and just one co
 First I want to encapsulate what we have so far in a function:
 
 \begin{python}
-def run(T_init, **kwdargs):
+def run(T_init, **kwargs):
     init = State(temp=T_init)
     system = System(init=init, T_env=22, t0=0, 
-                    dt=1, **kwdargs)
+                    dt=1, **kwargs)
     run_simulation(system, update)
     return system
 \end{python}
@@ -3633,7 +3639,7 @@ This function uses the value of \py{r} from \py{s1} as the value of \py{r} for t
 
 \section{Mix first or last?}
 
-Now we have everything we need to solve the problem.  First I'll create objects to represent the coffee and cream:
+Now we have everything we need to solve the problem.  First I'll create objects to represent the coffee and cream, and run for 30 minutes.
 
 \begin{python}
 coffee = run(T_init=90, t_end=30, r=r_coffee, volume=300)
@@ -3748,6 +3754,142 @@ run_analysis(coffee2)
 \end{python}
 
 The final temperature is \SI{70}{\celsius}, as it should be.  In fact, the results are identical to what we got by simulation, with very small differences due to round off errors.
+
+
+\chapter{Pharmacokinetics}
+
+{\bf Pharmacokinetics} is the study of how drugs and other substances move around the body, react, and are eliminated.  In this chapter, we will implement one of the most widely used pharmacokinetic models: the so-called ``minimal model" of glucose and insulin in the blood stream.
+
+{\bf Glucose} is a form of sugar that circulates in the blood of animals; it is used a fuel for muscles, the brain, and other organs.  The concentration of blood sugar is controlled by the hormone system, and especially by {\bf insulin}, which is produced by the pancreas and has the effect of reducing blood sugar.
+
+In people with normal pancreatic function, the hormone system maintains {\bf homeostasis}; that is, it keeps the concentration of blood sugar in a range that is neither too high or too low.
+
+But if the pancreas does not produce enough insulin, or if the cells that should respond to insulin become insensitive to its effect, blood sugar can become elevated, a condition called {\bf hyperglycemia}.  Long term, severe hyperglycemia is the defining symptom of {\bf diabetes mellitus}, a serious disease that affects almost 10\% of the population in the U.S. (see \url{https://www.cdc.gov/diabetes/data/statistics/2014statisticsreport.html}).
+
+One of the most used tests for hyperglycemia and diabetes is the frequently sampled intravenous glucose tolerance test (FSIVGTT or FSIGTT), in which glucose is injected into the blood stream of a fasting subject (someone who has not eaten recently), and then blood samples are collected at intervals of 2--10 minutes for 3 hours.  The samples are analyzed to measure the concentration of glucose and insulin.
+
+By analyzing these measurements, we can estimate several parameters of the subjects response; the most important is $S_I$, which quantifies the effect of insulin on the rate of reduction in blood sugar.
+
+My presentation in this chapter follows Bergman (2005) ``Minimal Model" (abstract at \url{https://www.karger.com/Article/Abstract/89312}, PDF at \url{http://faculty.washington.edu/gennari/teaching/591-BioSimSem/Bergman-minmodel05.pdf}).
+
+I also found useful a report by Natal van Riel (2004) ``Minimal Models for Glucose and Insulin Kinetics" (PDF at \url{https://pdfs.semanticscholar.org/3071/79e20d80ffa4a810e943aa7f737caf6517ca.pdf}).
+
+
+
+\section{The glucose minimal model}
+
+The minimal model consists of two parts, the glucose model, which takes measurements of insulin levels as inputs, and the insulin model, which takes measurements of glucose as inputs.  I will present an implementation of the glucose model; then in the notebook for this chapter, you will have the chance to implement the insulin model as an exercise.
+
+The original version of the minimal model was developed in the 1970s; since then, many variations and extensions have been proposed.  Bergman's comments on the development of the model provide insight into their process:
+
+\begin{quote}
+We applied the principle of Occam’s Razor, i.e. by asking
+what was the simplest model based upon known physiology
+that could account for the insulin-glucose relationship
+revealed in the data. Such a model must be simple
+enough to account totally for the measured glucose (given
+the insulin input), yet it must be possible, using mathematical
+techniques, to estimate all the characteristic parameters
+of the model from a single data set (thus avoiding
+unverifiable assumptions).
+\end{quote}
+
+The most useful models are the ones that achieve this balance: including enough realism to capture the essential features of the system, without too much complexity to be practical.  In this case the practical limit is the ability to estimate the parameters of the model using data, and to interpret the parameters meaningfully.
+
+Berman discusses the features he and his colleagues thought were essential:
+
+\begin{quote}
+(1) Glucose, once elevated by injection, returns to basal level due to
+two effects: the effect of glucose itself to normalize its own
+concentration [...] as well as the catalytic effect of insulin to allow
+glucose to self-normalize (2) Also, we discovered
+that the effect of insulin on net glucose disappearance
+must be sluggish --- that is, that insulin acts slowly because
+insulin must first move from plasma to a remote compartment [...] to exert its action on glucose disposal.
+\end{quote}
+
+To paraphrase the second point, the effect of insulin on glucose disposal, as seen in the data, happens more slowly than we would expect if it depended primarily on the the concentration of insulin in the blood.  Bergman's group hypothesized the insulin must move, relatively slowly, from the blood to a ``remote compartment" where it has its effect.
+
+At the time, the remote compartment was a modeling abstraction that might, or might not, reflect something physical.  Later, according to Bergman, it was ``shown to be interstitial fluid"; that is, the fluid that surrounds tissue cells.  In the history of mathematical modeling, it is common for hypothetical entities, added models to achieve particular effects, to be found later to correspond to real physical entities.
+
+The glucose model consists of two differential equations:
+%
+\[ \frac{dG}{dt} = -k_1 \left[ G(t) - G_b \right] - X(t) G(t)  \]
+%
+\[ \frac{dX}{dt} = k_3 \left[I(t) - I_b \right] - k_2 X(t) \]
+%
+where
+
+\begin{itemize}
+
+\item $G$ is the concentration of blood glucose as a function of time and $dG/dt$ is its rate of change.
+
+\item $I$ is the concentration of insulin in the blood as a function of time, which is taken as an input into the model, based on measurements.
+
+\item $G_b$ is the basal concentration of blood glucose and $I_b$ is the basal concentration of blood insulin, that is, the concentrations at equilibrium.  Both are constants estimated from measurements at the beginning or end of the test.
+
+\item $X$ is the concentration of insulin in the tissue fluid as a function of time and $dX/dt$ is its rate of change.
+
+\item $k_1$, $k_2$, and $k_3$ are positive-valued parameters that control the rates of appearance and disappearance for glucose and insulin. 
+
+\end{itemize}
+
+Now we can interpret the terms in the equations one by one:
+
+\begin{itemize}
+
+\item $-k_1 \left[ G(t) - G_b \right]$ is the rate of glucose disappearance due to the effect of glucose itself.  When $G(t)$ is above basal level, $G_b$, this term is negative; when $G(t)$ is below basal level this term is positive.  So in the absence of insulin, this term tends to restore blood glucose to basal level.
+
+\item $-X(t) G(t)$ models the interaction of glucose and insulin in tissue fluid, so the rate increases as either $X$ or $G$ increases.  This term does not require a parameter because the units of $X$ are unspecified; we can consider $X$ to be in whatever units would make the rate parameter of this term 1.
+
+\item $k_3 \left[ I(t) - I_b \right]$ is the rate at which insulin diffuses between blood and tissue fluid.  When $I(t)$ is above basal level, insulin diffuses from the blood into the tissue fluid.  When $I(t)$ is below basal level, insulin diffuses from tissue to the blood.
+
+\item $-k_2 X(t)$ is the rate of insulin disappearance in tissue fluid as it is consumed or broken down.
+
+\end{itemize}
+
+The initial state of the model is $X(0) = I_b$ and $G(0) = G_0$, where $G_0$ is a constant that represents the concentration of blood sugar immediately after the injection.  In theory we could estimate $G_0$ based on measurements, but in practice it takes time for the injected glucose to spread through the blood volume.  Since $G_0$ is not measurable, it is treated as a {\bf free parameter} of the model, which means that we are free to chose it to fit the data.
+
+\section{Data}
+
+To develop and test the model, I'll use data from Pacini and Bergman\footnote{"MINMOD: a computer program to calculate insulin sensitivity and pancreatic responsivity from the frequently sampled intravenous glucose tolerance test", {\em Computer Methods and Programs in Biomedicine} 23: 113-122.}.
+
+The dataset is in a file in the repository for this book, which we can read into a DataFrame:
+
+\begin{python}
+df = pd.read_csv('glucose_insulin.csv', index_col='time')
+\end{python}
+
+\py{df} has two columns: \py{glucose} is the concentration of blood glucose in \si{\milli\gram/\deci l}; \py{insulin} is concentration of insulin in the blood in \si{\micro U\per\milli l}
+
+The index is time in \si{\minute}.
+
+\begin{figure}
+\centerline{\includegraphics[height=3in]{figs/chap08-fig01.pdf}}
+\caption{Glucose and insulin concentrations measured by IVGTT.}
+\label{chap08-fig01}
+\end{figure}
+
+Figure~\ref{chap08-fig01} shows glucose and insulin concentrations over \SI{182}{\minute} for a subject with normal insulin production and sensitivity.
+
+
+
+\section{Interpolation}
+
+Before we are ready to implement the model, there's one problem we have to solve.  In the differential equations, $I$ is a function that can be evaluated at any time, $t$.
+
+We are treating $I(t)$ as an input to the model
+
+
+
+
+\section{Implementation}
+
+Based on previous examples, translating these differential equations into code is straightforward.
+
+
+
+
 
 
 \backmatter
